# llg

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  output.txt  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: code-quality.yml  deploy-pypi.yml  deploy-test-pypi.yml  testing.yml
docs/: llg.functions.rst
docs/source/: authors.rst  code.rst  conf.py  index.rst  installation.rst  readme.rst  usage.rst
ffunctions/: signature.pyf
fortran-modules/: functions.f90  functions.fun  main.f90  makefile  signature.pyf
fortran-src/: energy.f90  external_fields.f90  external_spin_fields.f90  heun.f90  mag_functions.f90  makefile  signature.pyf  spin_fields.f90
llg/: __init__.py  llg.py
src/: __init__.py
src/llg/: __init__.py  _tools.py  bucket.py  build_bcc_lattice.py  cli.py  geometry.py  heun.py  llg.py  plot_states.py  predefined_structures.py  read_sample.py  sample.py  scalar_list.py  scalar_list_matcher.py  simulation.py  site.py  store.py  system.py
src/llg/benchmarking/: __init__.py  benchmark.py
src/llg/cli/: build_generic_system.py  build_samples.py  entrypoint.py  prompts.py
src/llg/core/: constants.py  parameters.py  predefined_structures.py  sample.py  system.py  types.py
src/llg/functions/: __init__.py  energy.py  external_fields.py  heun.py  mag_functions.py  magnetization.py  spin_fields.py
src/llg/utils/: time_utils.py
tests/: conftest.py  pytest_fixtures.py  test_magnetization_functions.py
tests/core/: test_scalar_list.py  test_scalar_list_matcher.py
tests/ffunctions/energies/: pytest_fixtures.py  test_anisotropy_energy.py  test_exchange_energy.py  test_magnetic_energy.py
tests/ffunctions/external_fields/: pytest_fixtures.py  test_external_magnetic_spin_field.py  test_magnetic_field.py  test_thermal_field.py
tests/ffunctions/heun/: test_heun_integration.py
tests/ffunctions/mag_functions/: test_magnetization_by_type.py  test_magnetization_vector.py  test_magnetization_vector_by_type.py  test_total_magnetization.py
tests/ffunctions/spin_fields/: build_sc.py  pytest_fixtures.py  test_anisotropy_interaction_field.py  test_exchange_interaction_field.py
tests/functions/energies/: test_anisotropy_energy.py  test_exchange_energy.py  test_magnetic_energy.py
tests/functions/external_fields/: __init__.py  pytest_fixtures.py  test_magnetic_field.py  test_thermal_field.py
tests/functions/heun/: test_heun_integration.py
tests/functions/magnetization/: pytest_fixtures.py  (+4 more)
(+8 files in other folders)
