[tool.poetry]
name = "llg"
version = "1.0.2"
description = "Python package to solve the LLG equation by using the Heun scheme."
authors = ["Luisa Fernanda Velásquez González <lfvelasquezg@gmail.com>", "Juan David Alzate Cardona <jdalzatec@unal.edu.co>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lufvelasquezgo/llg"
keywords = ["llg", "magnetism", "physics", "simulation"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English"
]


[tool.poetry.scripts]
llg = 'llg.cli.entrypoint:main'


[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.22,<2.1"
h5py = "^3.11.0"
click = "^8.1.7"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
pillow = "^10.4.0"
moviepy = "^1.0.3"
Vapory = "^0.1.2"
numba = "^0.60.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
tox = "^4.18.1"
pytest = "^8.3.3"
pytest-repeat = "^0.9.3"
coverage = "^7.6.1"
mypy = "^1.11.2"
black = "^24.8.0"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
packages = ["src"]
disable_error_code = "empty-body"

[tool.isort]
profile = "black"

[tool.coverage.run]
command_line = "-m pytest"
source = ["src"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
